--- a/force-app/main/default/classes/CsvImportControllerTest.cls
+++ b/force-app/main/default/classes/CsvImportControllerTest.cls
@@ -3,13 +3,28 @@ private class CsvImportControllerTest {
 	@isTest
 	static void testGetSObjectList() {
 		System.runAs(new User(Id = UserInfo.getUserId())) {
-            Test.startTest();
+			Test.startTest();
 
 			List<String> sObjectList = CsvImportController.getSObjectList();
 
-            Test.stopTest();
+			Test.stopTest();
 
-			System.assertNotEquals(0, sObjectList.size(), 'SObject list should not be empty');
+			Assert.areNotEqual(0, sObjectList.size(), 'SObject list should not be empty');
+		}
+	}
+
+	@isTest
+	static void testGetFieldsList() {
+		System.runAs(new User(Id = UserInfo.getUserId())) {
+			Set<String> fields = Account.SObjectType.getDescribe().fields.getMap().keySet();
+
+			Test.startTest();
+			
+			List<String> resultFields = CsvImportController.getFieldsList('Account');
+
+			Test.stopTest();
+
+			Assert.areEqual(fields.size(), resultFields.size());
 		}
 	}
 }
